@@ -1,5 +1,8 @@
 ;;;; -*- coding: utf-8; fill-column: 78 -*-
 
+changes relative to sbcl-1.3.18:
+  * bug fix: backtracing from several threads at once could fail
+
 changes in sbcl-1.3.18 relative to sbcl-1.3.17:
   * minor incompatible change: existing values of CFLAGS, ASFLAGS,
     CPPFLAGS, and LINKFLAGS will be incorporated into C compiler
